--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,12 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.comi.rn.scanner">
+    package="io.comi.rn.barcode.scanner">
+
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.CAMERA"/>
-  <activity android:name="io.comi.rn.barcode.scanner.impl.CaptureActivity">
-  </activity>
-  <activity
-      android:name="com.linchaolong.android.imagepicker.cropper.CropImageActivity"
-      android:theme="@style/AppCompatTheme"/>
+
+  <application>
+    <activity android:name=".impl.CaptureActivity">
+    </activity>
+    <activity
+        android:name="com.linchaolong.android.imagepicker.cropper.CropImageActivity"
+        android:theme="@style/AppCompatTheme"/>
+  </application>
 </manifest>
