--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -90,8 +90,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "com.example"
@@ -134,8 +134,9 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':rn-barcode-scanner')
 }
 
 // Run this once to be able to run the application with BUCK
